--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 agp = "8.7.3"
-kotlin = "2.0.0"
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -8,7 +7,8 @@ espressoCore = "3.5.1"
 lifecycle = "2.8.0"
 activityCompose = "1.8.0"
 composeBom = "2024.04.01"
-room = "2.7.0-alpha04"
+room = "2.6.1" # Попробуй "2.7.0-alpha04" если ошибка сохраняется
+kotlin = "2.0.0"
 coroutines = "1.7.3"
 
 [libraries]
