--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/icon_launcher"
+        android:icon="@drawable/ic_launcher_foreground_1_0_1"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/icon_launcher"
+        android:roundIcon="@drawable/ic_launcher_foreground_1_0_1"
         android:supportsRtl="true"
         android:theme="@style/Theme.BetOne"
         tools:targetApi="31">
